--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,29 @@
 
 <body class="mat-typography">
   <app-root></app-root>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.16.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyB8VMheKuAd9oACuBSvaQJmgHjomYWHkWI",
+    authDomain: "lapostededj.firebaseapp.com",
+    databaseURL: "https://lapostededj.firebaseio.com",
+    projectId: "lapostededj",
+    storageBucket: "lapostededj.appspot.com",
+    messagingSenderId: "1015651726128",
+    appId: "1:1015651726128:web:76ba48e964d4c24da8cef5",
+    measurementId: "G-Y16XFHENHP"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
   </script>
@@ -26,14 +49,7 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
   </script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="/__/firebase/7.16.0/firebase-app.js"></script>
 
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="/__/firebase/7.16.0/firebase-analytics.js"></script>
-
-  <!-- Initialize Firebase -->
-  <script src="/__/firebase/init.js"></script>
 </body>
 
 </html>
